# VK--

./: .gitignore  4.c  Makefile  README.MD  find_film.txt  list_films.txt  main.c  ДЗ1.c
.github/workflows/: ci.yml
linters/: run.sh
list/: list.c  list.h
src/: CMakeLists.txt  main.c
src/algorithm/: CMakeLists.txt
src/algorithm/inc/: algorithm.h
src/algorithm/src/: algorithm.c  naive.c  parallel.c
src/array/: CMakeLists.txt  array.c  array.h
src/find/: CMakeLists.txt  find_film.c  find_film.h
src/find_film/: find_film.c  find_film.h
src/list/: CMakeLists.txt  list.c  list.h
src/naive/: CMakeLists.txt  naive.c  naive.h
src/parallel/: CMakeLists.txt  parallel.c  parallel.h
src/test/: CMakeLists.txt  test.cpp
src/tests/: CMakeLists.txt  test.cpp  test_algorithm.cpp  test_film.cpp  test_naive.cpp  test_parallel.cpp  test_sum.cpp
